2005-06-26  Tor Lillqvist  <tml@novell.com>

	* app/tools/gimppainttool.c (gimp_paint_tool_draw): Store the
	GimpBrushCore::brush_bound_segs as sorted (the result of
	sort_boundary), as the only place where it is used
	(gimp_draw_tool_draw_boundary()) would sort it each time it is
	called anyway.

	* app/tools/gimpdrawtool.c (gimp_draw_tool_draw_boundary):
	Correspondingly we now don't have to sort the boundary here.

2005-06-26  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/gimprc.pdb: allow to access (read-only) the
	current color management configuration through the PDB.

	* libgimp/gimpgimprc_pdb.[ch]
	* app/pdb/gimprc_cmds.c
	* app/pdb/internal_procs.c: regenerated.

	* libgimp/Makefile.am
	* libgimp/gimp.h
	* libgimp/gimpgimprc.[ch]: wrap the new PDB function to make it
	easier to use from plug-ins. This change adds a dependency on
	libgimpconfig to libgimp.

	* gimp.pc.in: changed accordingly.

	* plug-ins/FractalExplorer/Dialogs.c
	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gflare/gflare.c: no need to include gimpconfig.h
	explicitely any longer.

	* libgimp/gimpfontselectbutton.c: fixed gtk-doc comments.

2005-06-26  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: also use bold, right-aligned labels here.

2005-06-25  Manish Singh  <yosh@gimp.org>

	* app/core/gimpinterpreterdb.c: eat CRs too, since they might be
	there on Win32 systems.

2005-06-25  Manish Singh  <yosh@gimp.org>

	* configure.in: introduce a notion of runtime path to the python
	interpreter, for the pygimp.interp file.

	* plug-ins/pygimp/Makefile.am: use it here.

2005-06-25  Manish Singh  <yosh@gimp.org>

	* configure.in: attempt to work around weird escaping behavior
	in the windows shell when converting backslashes to forward
	slashes.

2005-06-25  Manish Singh  <yosh@gimp.org>

	* configure.in: convert backslashes to forward slashes for python
	stuff on Win32.

2005-06-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpimagepropview.c: use bold and right-aligned